@@ -43,6 +43,7 @@ PHP                                                                        NEWS
 - Fixed bug #29447 (Reflection API issues). (Marcus)
 - Fixed bug #29296 (Added sslv2 and sslv3 transports). (Wez)
 - Fixed bug #29283 (Invalid statement handle in mysqli on execute). (Georg)
+- Fixed bug #29913 (parse_url() is now binary safe). (Ilia)
 - Fixed bug #27994 (segfault with Soapserver when WSDL-Cache is enabled).
   (Dmitry)
 - Fixed bug #27791 (Apache 2.0 SAPI build against Apache 2 HEAD). (Joe Orton,
